crates/tm-sparql/tests/snapshots/lower_patterns__ask.snap
---
source: crates/tm-sparql/tests/lower_patterns.rs
expression: "ir(\"ASK { v:alice v:worksAt v:acme }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?~ask]
  (orderLimit [] :limit 1
    (extend ?~ask true
      (project []
        (triple <urn:tiramemsu:v:alice> <urn:tiramemsu:v:worksAt> <urn:tiramemsu:v:acme> :view now)))))
