crates/tm-sparql/tests/snapshots/lower_patterns__exists.snap
---
source: crates/tm-sparql/tests/lower_patterns.rs
expression: "ir(\"SELECT ?p WHERE { ?p a v:Person FILTER EXISTS { ?p v:worksAt ?c } }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?p]
  (filter (exists (triple ?p <urn:tiramemsu:v:worksAt> ?c :view now))
    (triple ?p <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <urn:tiramemsu:v:Person> :view now)))
