crates/tm-sparql/tests/snapshots/lower_patterns__extend.snap
---
source: crates/tm-sparql/tests/lower_patterns.rs
expression: "ir(\"SELECT ?y WHERE { v:alice v:age ?a BIND(2026 - ?a AS ?y) }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?y]
  (extend ?y (- 2026 ?a)
    (triple <urn:tiramemsu:v:alice> <urn:tiramemsu:v:age> ?a :view now)))
