crates/tm-sparql/tests/snapshots/lower_patterns__minus_disjoint.snap
---
source: crates/tm-sparql/tests/lower_patterns.rs
expression: "ir(\"SELECT ?p WHERE { ?p a v:Person MINUS { ?x v:banned true } }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?p]
  (triple ?p <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <urn:tiramemsu:v:Person> :view now))
