crates/tm-sparql/tests/snapshots/lower_patterns__select_carries_the_sparql_flags.snap
---
source: crates/tm-sparql/tests/lower_patterns.rs
expression: "ir(\"SELECT ?c WHERE { v:alice v:worksAt ?c }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?c]
  (triple <urn:tiramemsu:v:alice> <urn:tiramemsu:v:worksAt> ?c :view now))
